# conditional-knn

./: .gitignore  README.md  c_kernels.c  c_kernels.pxd  c_kernels.pyx  ccknn.c  ccknn.pyx  cholesky.py  cknn.py  conda-lock.yml  environment-intel.yml  environment.yml  flake.nix  get_datasets  gp_kernels.py  gp_regression.py  linux-64-explicit-spec-list.txt  linux-64-intel.txt  linux-64-spec-list.txt  maxheap.c  maxheap.pxd  maxheap.pyx  mkl.pxd  ordering.py  osx-64-explicit-spec-list.txt  osx-64-spec-list.txt  pyproject.toml  requirements-intel.txt  requirements.txt  sequence.c  sequence.pxd  sequence.pyx  setup.py  setup_ccknn.py  setup_maxheap.py  tests.py
KoLesky/: c_kernels.pyx  c_ordering.pyx  ccknn.pyx  cholesky.py  cknn.py  gp_kernels.py  gp_regression.py  hlibpro.pyx  hpro.pxd  linalg.py  maxheap.pxd  maxheap.pyx  ordering.py  typehints.py
datasets/oco2/: compile_fluorescence_data.R
experiments/: __init__.py  cg.py  cholesky.py  gp_regr.py  laplacian.py  mnist.py  recover.py
figures/: __init__.py  factor.py  kernel.py  sarcos.py  screen_select.py
misc/: hlib_benchmark.py  lagp.py  submodular.py  tests.py
src/: CKNN.jl  test_cknn.jl  test_quantum.jl
tests/: chol_tests.py  cknn_tests.py  gp_regr_tests.py  gp_tests.py  heap_tests.py  hlib_tests.py  linalg_tests.py  order_tests.py  p_order_tests.py  tests.py
