[tool.poetry]
name = "conditional-knn"
version = "0.1.0"
description = "Sparse Cholesky by greedy conditional selection"
authors = ["Stephen Huan <shuan@gatech.edu>"]
readme = "README.md"
packages = [{include = "KoLesky"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["venv", ".venv"]
root = "KoLesky"
venvPath = "."
venv = "venv"

[tool.ruff]
line-length = 79

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
